syntax = "proto3";
package Cratis.Chronicle.Contracts.Projections;
import "google/protobuf/empty.proto";
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message AppendedEvent {
   EventContext Context = 1;
   string Content = 2;
}
message Causation {
   SerializableDateTimeOffset Occurred = 1;
   string Type = 2;
   map<string,string> Properties = 3;
}
message ChildrenDefinition {
   string IdentifiedBy = 1;
   repeated KeyValuePair_EventType_FromDefinition From = 2;
   repeated KeyValuePair_EventType_JoinDefinition Join = 3;
   map<string,ChildrenDefinition> Children = 4;
   FromEveryDefinition All = 5;
   FromEventPropertyDefinition FromEventProperty = 6;
   repeated KeyValuePair_EventType_RemovedWithDefinition RemovedWith = 7;
   repeated KeyValuePair_EventType_RemovedWithJoinDefinition RemovedWithJoin = 8;
}
message DehydrateSessionRequest {
   string EventStore = 1;
   string Namespace = 2;
   string EventSequenceId = 3;
   string ProjectionId = 4;
   string ReadModelKey = 5;
   .bcl.Guid SessionId = 6;
}
message EventContext {
   EventType EventType = 1;
   string EventSourceType = 2;
   string EventSourceId = 3;
   uint64 SequenceNumber = 4;
   string EventStreamType = 5;
   string EventStreamId = 6;
   SerializableDateTimeOffset Occurred = 7;
   string EventStore = 8;
   string Namespace = 9;
   .bcl.Guid CorrelationId = 10; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   repeated Causation Causation = 11;
   Identity CausedBy = 12;
   EventObservationState ObservationState = 13;
}
enum EventObservationState {
   // this is a composite/flags enumeration
   None = 0;
   Initial = 1;
   HeadOfReplay = 2;
   Replay = 4;
   TailOfReplay = 8;
}
message EventToApply {
   EventType EventType = 1;
   string Content = 2;
}
message EventType {
   string Id = 1;
   uint32 Generation = 2;
   bool Tombstone = 3;
}
message FromDefinition {
   map<string,string> Properties = 1;
   string Key = 2;
   string ParentKey = 3;
}
message FromDerivativesDefinition {
   repeated EventType EventTypes = 1;
   FromDefinition From = 2;
}
message FromEventPropertyDefinition {
   EventType Event = 1;
   string PropertyExpression = 2;
}
message FromEveryDefinition {
   map<string,string> Properties = 1;
   bool IncludeChildren = 2;
}
message GetInstanceByIdForSessionRequest {
   string EventStore = 1;
   string Namespace = 2;
   string EventSequenceId = 3;
   string ProjectionId = 4;
   string ReadModelKey = 5;
   .bcl.Guid SessionId = 6;
}
message GetInstanceByIdForSessionWithEventsAppliedRequest {
   string EventStore = 1;
   string Namespace = 2;
   string EventSequenceId = 3;
   string ProjectionId = 4;
   string ReadModelKey = 5;
   .bcl.Guid SessionId = 6;
   repeated EventToApply Events = 7;
}
message GetInstanceByIdRequest {
   string EventStore = 1;
   string Namespace = 2;
   string EventSequenceId = 3;
   string ProjectionId = 4;
   string ReadModelKey = 5;
}
message GetSnapshotsByIdRequest {
   string ProjectionId = 1;
   string EventStore = 2;
   string Namespace = 3;
   string EventSequenceId = 4;
   string ReadModelKey = 5;
}
message GetSnapshotsByIdResponse {
   repeated ProjectionSnapshot Snapshots = 1;
}
message Identity {
   string Subject = 1;
   string Name = 2;
   string UserName = 3;
   Identity OnBehalfOf = 4;
}
message JoinDefinition {
   string On = 1;
   map<string,string> Properties = 2;
   string Key = 3;
}
message KeyValuePair_EventType_FromDefinition {
   EventType Key = 1;
   FromDefinition Value = 2;
}
message KeyValuePair_EventType_JoinDefinition {
   EventType Key = 1;
   JoinDefinition Value = 2;
}
message KeyValuePair_EventType_RemovedWithDefinition {
   EventType Key = 1;
   RemovedWithDefinition Value = 2;
}
message KeyValuePair_EventType_RemovedWithJoinDefinition {
   EventType Key = 1;
   RemovedWithJoinDefinition Value = 2;
}
message ProjectionChangeset {
   string Namespace = 1;
   string ReadModelKey = 2;
   string ReadModel = 3;
}
message ProjectionDefinition {
   string EventSequenceId = 1;
   string Identifier = 2;
   string ReadModel = 3;
   bool IsActive = 4;
   bool IsRewindable = 5;
   string InitialModelState = 6;
   repeated KeyValuePair_EventType_FromDefinition From = 7;
   repeated KeyValuePair_EventType_JoinDefinition Join = 8;
   map<string,ChildrenDefinition> Children = 9;
   repeated FromDerivativesDefinition FromEvery = 10;
   FromEveryDefinition All = 11;
   FromEventPropertyDefinition FromEventProperty = 12;
   repeated KeyValuePair_EventType_RemovedWithDefinition RemovedWith = 13;
   repeated KeyValuePair_EventType_RemovedWithJoinDefinition RemovedWithJoin = 14;
   SerializableDateTimeOffset LastUpdated = 15;
   SinkDefinition Sink = 16;
}
enum ProjectionOwner {
   None = 0;
   Client = 1;
   Server = 2;
}
message ProjectionResult {
   string ReadModel = 1;
   repeated string AffectedProperties = 2;
   int32 ProjectedEventsCount = 3;
   uint64 LastHandledEventSequenceNumber = 4;
}
message ProjectionSnapshot {
   string ReadModel = 1;
   repeated AppendedEvent Events = 2;
   SerializableDateTimeOffset Occurred = 3;
   .bcl.Guid CorrelationId = 4; // default value could not be applied: 00000000-0000-0000-0000-000000000000
}
message ProjectionWatchRequest {
   string EventStore = 1;
   string ProjectionId = 2;
}
message RegisterRequest {
   string EventStore = 1;
   ProjectionOwner Owner = 2;
   repeated ProjectionDefinition Projections = 3;
}
message RemovedWithDefinition {
   string Key = 1;
   string ParentKey = 2;
}
message RemovedWithJoinDefinition {
   string Key = 1;
}
message SerializableDateTimeOffset {
   int64 Ticks = 1;
   double OffsetMinutes = 2;
}
message SinkDefinition {
   .bcl.Guid ConfigurationId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   .bcl.Guid TypeId = 2; // default value could not be applied: 00000000-0000-0000-0000-000000000000
}
service Projections {
   rpc DehydrateSession (DehydrateSessionRequest) returns (.google.protobuf.Empty);
   rpc GetInstanceById (GetInstanceByIdRequest) returns (ProjectionResult);
   rpc GetInstanceByIdForSession (GetInstanceByIdForSessionRequest) returns (ProjectionResult);
   rpc GetInstanceByIdForSessionWithEventsApplied (GetInstanceByIdForSessionWithEventsAppliedRequest) returns (ProjectionResult);
   rpc GetSnapshotsById (GetSnapshotsByIdRequest) returns (GetSnapshotsByIdResponse);
   rpc Register (RegisterRequest) returns (.google.protobuf.Empty);
   rpc Watch (ProjectionWatchRequest) returns (stream ProjectionChangeset);
}
